test/sema/negative/subtyping2.impala
fn f(r: fn(f32)->()) -> () {
   r(4)
}
