test/sema/negative/subtyping2.output
subtyping2.impala:2 col 6: error: wrong argument type; expected f32 but found i32
